--- a/course-map.html
+++ b/course-map.html
@@ -6,7 +6,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>教務資訊服務網</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/course-map.css" />
+	<script src="js/course-map.js"></script>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
 				<label>學習歷程</label>
 				<a href="course-map.html"><img src="images/ic-coursemap.svg"> 課程地圖</a>
 				<a href="learning-footprint.html"><img src="images/ic-footprints.svg"> 學習足跡</a>
-				<a href="#"><img src="images/ic-classgrid.svg"> 修課總覽</a>
+				<a href="course-overview.html"><img src="images/ic-classgrid.svg"> 修課總覽</a>
 				<label>活動經歷</label>
 				<a href="#"><img src="images/ic-societies.svg">社團經歷</a>
 				<a href="#"><img src="images/ic-cup.svg"> 競賽成果</a>
@@ -113,7 +114,196 @@
 					<div class="expand-title">
 						<h1>生物醫學領域相關<p>報考生物醫學相關研究所</p>
 						</h1>
-						<!-- <a herf="#">+<a> -->
+						<img src="images/plus.svg">
+					</div>
+					<div class="expand-sub-container">
+						<div class="expand-content">
+							<p>修課建議（應加強之專業能力）</p>
+							<div class="expand-table-container">
+								<p>基礎課程(強烈建議)</p>
+								<table class="expand-table">
+									<tr>
+										<th class="table-course">課程</th>
+										<th>一</th>
+										<th>二</th>
+										<th>三</th>
+										<th>四</th>
+										<th>五</th>
+										<th>六</th>
+										<th>七</th>
+										<th>八</th>
+										<th>年級</th>
+									</tr>
+									<tr>
+										<td class="table-course">胚胎學</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">獸醫細菌學及實習</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">實驗動物科學</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">獸醫生理學上</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">獸醫生理學下</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="expand-table-container">
+								<p>進階課程(自由選修)</p>
+								<table class="expand-table">
+									<tr>
+										<th class="table-course">課程</th>
+										<th>一</th>
+										<th>二</th>
+										<th>三</th>
+										<th>四</th>
+										<th>五</th>
+										<th>六</th>
+										<th>七</th>
+										<th>八</th>
+										<th>年級</th>
+									</tr>
+									<tr>
+										<td class="table-course">動物倫理與公共政策</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">全球動物保護與公共政策</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">動物保護的世界觀</td>
+										<td></td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">動物權</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">專題研究上</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">專題研究下</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="expand-table-container">
+								<p>建議修習學程</p>
+								<ul class="expand-table">
+									<li>生物技術學程</li>
+								</ul>
+							</div>
+							<div class="expand-table-container">
+								<p>相關考試科目</p>
+								<ul class="expand-table">
+									<li>報考獸醫學研究所</li>
+									<li>基礎組報考獸醫學研究所</li>
+									<li>公衛組報考獸密學研究所</li>
+									<li>病理生物組報考獸密學研究所</li>
+									<li>勳物福利組報考臨床動物密學研究所</li>
+									<li>伴侶動物組報考臨末動物密學研究所</li>
+								</ul>
+							</div>
+
+						</div>
 					</div>
 				</div>
 				<h1>資工系未來就業發展</h1>
@@ -121,7 +311,7 @@
 					<div class="expand-title">
 						<h1>生物醫學相關研究人員<p>擔任政府機構公職獸醫或其他職系學術研究機構研究人員</p>
 						</h1>
-						<!--  <a herf="#">+<a> -->
+						<img src="images/plus.svg">
 					</div>
 					<div class="expand-sub-container">
 						<div class="expand-content">
@@ -317,13 +507,391 @@
 					<div class="expand-title">
 						<h1>公務人員 - 獸醫職系<p>擔任政府機構公職獸醫師或其他職系學術研究機構研究人員</p>
 						</h1>
-						<!--  <a herf="#">+<a> -->
+						<img src="images/plus.svg">
+					</div>
+					<div class="expand-sub-container">
+						<div class="expand-content">
+							<p>修課建議（應加強之專業能力）</p>
+							<div class="expand-table-container">
+								<p>基礎課程(強烈建議)</p>
+								<table class="expand-table">
+									<tr>
+										<th class="table-course">課程</th>
+										<th>一</th>
+										<th>二</th>
+										<th>三</th>
+										<th>四</th>
+										<th>五</th>
+										<th>六</th>
+										<th>七</th>
+										<th>八</th>
+										<th>年級</th>
+									</tr>
+									<tr>
+										<td class="table-course">胚胎學</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">獸醫細菌學及實習</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">實驗動物科學</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">獸醫生理學上</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">獸醫生理學下</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="expand-table-container">
+								<p>進階課程(自由選修)</p>
+								<table class="expand-table">
+									<tr>
+										<th class="table-course">課程</th>
+										<th>一</th>
+										<th>二</th>
+										<th>三</th>
+										<th>四</th>
+										<th>五</th>
+										<th>六</th>
+										<th>七</th>
+										<th>八</th>
+										<th>年級</th>
+									</tr>
+									<tr>
+										<td class="table-course">動物倫理與公共政策</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">全球動物保護與公共政策</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">動物保護的世界觀</td>
+										<td></td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">動物權</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">專題研究上</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">專題研究下</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="expand-table-container">
+								<p>建議修習學程</p>
+								<ul class="expand-table">
+									<li>生物技術學程</li>
+								</ul>
+							</div>
+							<div class="expand-table-container">
+								<p>相關考試科目</p>
+								<ul class="expand-table">
+									<li>報考獸醫學研究所</li>
+									<li>基礎組報考獸醫學研究所</li>
+									<li>公衛組報考獸密學研究所</li>
+									<li>病理生物組報考獸密學研究所</li>
+									<li>勳物福利組報考臨床動物密學研究所</li>
+									<li>伴侶動物組報考臨末動物密學研究所</li>
+								</ul>
+							</div>
+
+						</div>
 					</div>
 				</div>
 				<div class="expand-container">
 					<div class="expand-title">
 						<h1>執業獸醫師</h1>
-						<!--  <a herf="#">+<a> -->
+						<img src="images/plus.svg">
+					</div>
+					<div class="expand-sub-container">
+						<div class="expand-content">
+							<p>修課建議（應加強之專業能力）</p>
+							<div class="expand-table-container">
+								<p>基礎課程(強烈建議)</p>
+								<table class="expand-table">
+									<tr>
+										<th class="table-course">課程</th>
+										<th>一</th>
+										<th>二</th>
+										<th>三</th>
+										<th>四</th>
+										<th>五</th>
+										<th>六</th>
+										<th>七</th>
+										<th>八</th>
+										<th>年級</th>
+									</tr>
+									<tr>
+										<td class="table-course">胚胎學</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">獸醫細菌學及實習</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">實驗動物科學</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">獸醫生理學上</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">獸醫生理學下</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="expand-table-container">
+								<p>進階課程(自由選修)</p>
+								<table class="expand-table">
+									<tr>
+										<th class="table-course">課程</th>
+										<th>一</th>
+										<th>二</th>
+										<th>三</th>
+										<th>四</th>
+										<th>五</th>
+										<th>六</th>
+										<th>七</th>
+										<th>八</th>
+										<th>年級</th>
+									</tr>
+									<tr>
+										<td class="table-course">動物倫理與公共政策</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">全球動物保護與公共政策</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">動物保護的世界觀</td>
+										<td></td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">動物權</td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">專題研究上</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="table-course">專題研究下</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td>&#10004</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="expand-table-container">
+								<p>建議修習學程</p>
+								<ul class="expand-table">
+									<li>生物技術學程</li>
+								</ul>
+							</div>
+							<div class="expand-table-container">
+								<p>相關考試科目</p>
+								<ul class="expand-table">
+									<li>報考獸醫學研究所</li>
+									<li>基礎組報考獸醫學研究所</li>
+									<li>公衛組報考獸密學研究所</li>
+									<li>病理生物組報考獸密學研究所</li>
+									<li>勳物福利組報考臨床動物密學研究所</li>
+									<li>伴侶動物組報考臨末動物密學研究所</li>
+								</ul>
+							</div>
+
+						</div>
 					</div>
 				</div>
 			</div>
