--- a/learning-footprint.html
+++ b/learning-footprint.html
@@ -6,7 +6,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>教務資訊服務網</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/learning-footprint.css" />
+	<script src="js/learning-footprint.js"></script>
 </head>
 
 <body>
@@ -16,15 +17,15 @@
 			<div class="left-menu">
 				<label>個人資訊</label>
 				<a href="basic-info.html"><img src="images/ic-personal.svg">基本資料</a>
-				<a href="teacher-info.html"><img src="images/ic-teacher.svg"> 導師資訊</a>
+				<a href="teacher-info.html"><img src="images/ic-teacher.svg">導師資訊</a>
 				<label>學習歷程</label>
-				<a href="course-map.html"><img src="images/ic-coursemap.svg"> 課程地圖</a>
-				<a href="learning-footprint.html"><img src="images/ic-footprints.svg"> 學習足跡</a>
-				<a href="#"><img src="images/ic-classgrid.svg"> 修課總覽</a>
+				<a href="course-map.html"><img src="images/ic-coursemap.svg">課程地圖</a>
+				<a href="learning-footprint.html"><img src="images/ic-footprints.svg">學習足跡</a>
+				<a href="course-overview.html"><img src="images/ic-classgrid.svg">修課總覽</a>
 				<label>活動經歷</label>
 				<a href="#"><img src="images/ic-societies.svg">社團經歷</a>
-				<a href="#"><img src="images/ic-cup.svg"> 競賽成果</a>
-				<a href="#"><img src="images/ic-services.svg"> 服務學習</a>
+				<a href="#"><img src="images/ic-cup.svg">競賽成果</a>
+				<a href="#"><img src="images/ic-services.svg">服務學習</a>
 			</div>
 		</nav>
 
@@ -38,12 +39,12 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">核准學年期</th>
-							<th class="table-department">修讀科系</th>
+							<th class="table-column1">核准學年期</th>
+							<th class="table-column2">修讀科系</th>
 						</tr>
 						<tr>
-							<td class="table-semester">100-1</td>
-							<td class="table-department">中國文學系</td>
+							<td class="table-column1">100-1</td>
+							<td class="table-column2">中國文學系</td>
 						</tr>
 					</table>
 				</div>
@@ -53,12 +54,12 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">核准學年期</th>
-							<th class="table-reason">原因</th>
+							<th class="table-column1">核准學年期</th>
+							<th class="table-column2">原因</th>
 						</tr>
 						<tr>
-							<td class="table-semester">100-1</td>
-							<td class="table-reason">C3 逾期未註冊</td>
+							<td class="table-column1">100-1</td>
+							<td class="table-column2">C3 逾期未註冊</td>
 						</tr>
 					</table>
 				</div>
@@ -68,14 +69,14 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">核准學年期</th>
-							<th class="table-reason">原因</th>
-							<th class="table-duration">時長</th>
+							<th class="table-column1">核准學年期</th>
+							<th class="table-column3">原因</th>
+							<th class="table-column4">時長</th>
 						</tr>
 						<tr>
-							<td class="table-semester">100-1</td>
-							<td class="table-reason">受疫情影響</td>
-							<td class="table-duration">2學期</td>
+							<td class="table-column1">100-1</td>
+							<td class="table-column3">受疫情影響</td>
+							<td class="table-column4">2學期</td>
 						</tr>
 					</table>
 				</div>
@@ -85,12 +86,12 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">核准學年期</th>
-							<th class="table-department">修讀科系</th>
+							<th class="table-column1">核准學年期</th>
+							<th class="table-column2">修讀科系</th>
 						</tr>
 						<tr>
-							<td class="table-semester">100-1</td>
-							<td class="table-department">中國文學系</td>
+							<td class="table-column1">100-1</td>
+							<td class="table-column2">中國文學系</td>
 						</tr>
 					</table>
 				</div>
@@ -100,12 +101,12 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">核准學年期</th>
-							<th class="table-department">修讀科系</th>
+							<th class="table-column1\">核准學年期</th>
+							<th class="table-column2">修讀科系</th>
 						</tr>
 						<tr>
-							<td class="table-semester">100-1</td>
-							<td class="table-department">中國文學系</td>
+							<td class="table-column1">100-1</td>
+							<td class="table-column2">中國文學系</td>
 						</tr>
 					</table>
 				</div>
@@ -115,14 +116,14 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">核准學年期</th>
-							<th class="table-school">修讀學校</th>
-							<th class="table-department">修讀科系</th>
+							<th class="table-column1">核准學年期</th>
+							<th class="table-column3">修讀學校</th>
+							<th class="table-column4">修讀科系</th>
 						</tr>
 						<tr>
-							<td class="table-semester">100-1</td>
-							<td class="table-school">國立臺灣科系大學</td>
-							<td class="table-department">應用外語系</td>
+							<td class="table-column1">100-1</td>
+							<td class="table-column3">國立臺灣科系大學</td>
+							<td class="table-column4">應用外語系</td>
 						</tr>
 					</table>
 				</div>
@@ -132,19 +133,19 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">學年期</th>
-							<th class="table-school">交換學校</th>
-							<th class="table-duration">時長</th>
+							<th class="table-column1">學年期</th>
+							<th class="table-column3">交換學校</th>
+							<th class="table-column4">時長</th>
 						</tr>
 						<tr>
-							<td class="table-semester">112-2</td>
-							<td class="table-school">荷蘭萊頓大學</td>
-							<td class="table-duration">1學期</td>
+							<td class="table-column1">112-2</td>
+							<td class="table-column3">荷蘭萊頓大學</td>
+							<td class="table-column4">1學期</td>
 						</tr>
 						<tr>
-							<td class="table-semester">113-2</td>
-							<td class="table-school">巴黎高等政治學院</td>
-							<td class="table-duration">1學期</td>
+							<td class="table-column1">113-2</td>
+							<td class="table-column3">巴黎高等政治學院</td>
+							<td class="table-column4">1學期</td>
 						</tr>
 					</table>
 				</div>
@@ -154,19 +155,19 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">學年期/日期</th>
-							<th class="table-school">申請學程</th>
-							<th class="table-duration">狀態</th>
+							<th class="table-column1">學年期/日期</th>
+							<th class="table-column3">申請學程</th>
+							<th class="table-column4">狀態</th>
 						</tr>
 						<tr>
-							<td class="table-semester">112-2</td>
-							<td class="table-school">教育學程</td>
-							<td class="table-duration">核准</td>
+							<td class="table-column1">112-2</td>
+							<td class="table-column3">教育學程</td>
+							<td class="table-column4">核准</td>
 						</tr>
 						<tr>
-							<td class="table-semester">112-2</td>
-							<td class="table-school">教育學程</td>
-							<td class="table-duration">核准</td>
+							<td class="table-column1">112-2</td>
+							<td class="table-column3">教育學程</td>
+							<td class="table-column4">核准</td>
 						</tr>
 					</table>
 				</div>
@@ -176,19 +177,42 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">學年期</th>
-							<th class="table-activity">活動名稱</th>
-							<th class="table-organizer">主辦單位</th>
+							<th class="table-column5">學年期</th>
+							<th class="table-column6">活動名稱</th>
+							<th class="table-column6">主辦單位</th>
+							<th class="expand-btn"></th>
 						</tr>
 						<tr>
-							<td class="table-semester">112-2</td>
-							<td class="table-activity">台大椰林講座-東京大學藤井輝夫校長</td>
-							<td class="table-organizer">共同教育中心</td>
+							<td class="table-column5">112-2</td>
+							<td class="table-column6">台大椰林講座-東京大學藤井輝夫校長</td>
+							<td class="table-column6">共同教育中心</td>
+							<td class="expand-btn"><img src="images/arrow.svg"></td>
+						</tr>
+						<tr class="table-expand-row">
+							<td class="table-expand-td">
+								<p class="table-detail-title">日期</p>
+								<p>2023/12/12</p>
+							</td>
+							<td class="table-expand-td" colspan="3">
+								<p class="table-detail-title">活動性質</p>
+								<p>台大椰林講座</p>
+							</td>
 						</tr>
 						<tr>
-							<td class="table-semester">112-2</td>
-							<td class="table-activity">台大椰林講座-東京大學藤井輝夫校長</td>
-							<td class="table-organizer">共同教育中心</td>
+							<td class="table-column5">112-2</td>
+							<td class="table-column6">台大椰林講座-東京大學藤井輝夫校長</td>
+							<td class="table-column6">共同教育中心</td>
+							<td class="expand-btn"><img src="images/arrow.svg"></td>
+						</tr>
+						<tr class="table-expand-row">
+							<td class="table-expand-td">
+								<p class="table-detail-title">日期</p>
+								<p>2023/12/12</p>
+							</td>
+							<td class="table-expand-td" colspan="3">
+								<p class="table-detail-title">活動性質</p>
+								<p>台大椰林講座</p>
+							</td>
 						</tr>
 					</table>
 				</div>
@@ -198,19 +222,34 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">學年期</th>
-							<th class="table-activity">活動名稱</th>
-							<th class="table-organizer">主辦單位</th>
+							<th class="table-column5">學年期</th>
+							<th class="table-column6">活動名稱</th>
+							<th class="table-column6">主辦單位</th>
+							<th class="expand-btn"></th>
 						</tr>
 						<tr>
-							<td class="table-semester">112-2</td>
-							<td class="table-activity">111-1教學助理認證研習會</td>
-							<td class="table-organizer">教學發展中心教師發展組</td>
+							<td class="table-column5">112-2</td>
+							<td class="table-column6">111-1教學助理認證研習會</td>
+							<td class="table-column6">教學發展中心教師發展組</td>
+							<td class="expand-btn"><img src="images/arrow.svg"></td>
+						</tr>
+						<tr class="table-expand-row">
+							<td class="table-expand-td" colspan="4">
+								<p class="table-detail-title">活動性質</p>
+								<p>協助本校有意培任教學助理的學生瞭解相關工作內教師發展組認證研習會容，培育核心能力，成為授課老師的強力助手。</p>
+							</td>
 						</tr>
 						<tr>
-							<td class="table-semester">112-2</td>
-							<td class="table-activity">111-1教學助理認證研習會</td>
-							<td class="table-organizer">共同教育中心</td>
+							<td class="table-column5">112-2</td>
+							<td class="table-column6">111-1教學助理認證研習會</td>
+							<td class="table-column6">共同教育中心</td>
+							<td class="expand-btn"><img src="images/arrow.svg"></td>
+						</tr>
+						<tr class="table-expand-row">
+							<td class="table-expand-td" colspan="4">
+								<p class="table-detail-title">活動性質</p>
+								<p>協助本校有意培任教學助理的學生瞭解相關工作內教師發展組認證研習會容，培育核心能力，成為授課老師的強力助手。</p>
+							</td>
 						</tr>
 					</table>
 				</div>
@@ -220,19 +259,58 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-semester">學年期</th>
-							<th class="table-activity">活動名稱</th>
-							<th class="table-organizer">主辦單位</th>
+							<th class="table-column5">學年期</th>
+							<th class="table-column6">活動名稱</th>
+							<th class="table-column6">主辦單位</th>
+							<th class="expand-btn"></th>
 						</tr>
 						<tr>
-							<td class="table-semester">112-2</td>
-							<td class="table-activity">2011服務學習暨社會服務隊成果發表會</td>
-							<td class="table-organizer">課務組</td>
+							<td class="table-column5">112-2</td>
+							<td class="table-column6">2011服務學習暨社會服務隊成果發表會</td>
+							<td class="table-column6">課務組</td>
+							<td class="expand-btn"><img src="images/arrow.svg"></td>
+						</tr>
+						<tr class="table-expand-row">
+							<td class="table-expand-td">
+								<p class="table-detail-title">時數</p>
+								<p>5</p>
+							</td>
+							<td class="table-expand-td">
+								<p class="table-detail-title">起訖日期</p>
+								<p>2020/01~2020/01</p>
+							</td>
+							<td class="table-expand-td">
+								<p class="table-detail-title">證書號</p>
+								<p>001</p>
+							</td>
+							<td class="table-expand-td">
+								<p class="table-detail-title">狀態</p>
+								<p>合格</p>
+							</td>
 						</tr>
 						<tr>
-							<td class="table-semester">112-2</td>
-							<td class="table-activity">2011服務學習暨社會服務隊成果發表會</td>
-							<td class="table-organizer">課務組</td>
+							<td class="table-column5">112-2</td>
+							<td class="table-column6">2011服務學習暨社會服務隊成果發表會</td>
+							<td class="table-column6">課務組</td>
+							<td class="expand-btn"><img src="images/arrow.svg"></td>
+						</tr>
+						<tr class="table-expand-row">
+							<td class="table-expand-td">
+								<p class="table-detail-title">時數</p>
+								<p>5</p>
+							</td>
+							<td class="table-expand-td">
+								<p class="table-date">起訖日期</p>
+								<p>2020/01~2020/01</p>
+							</td>
+							<td class="table-expand-td">
+								<p class="table-num">證書號</p>
+								<p>001</p>
+							</td>
+							<td class="table-expand-td">
+								<p class="table-detail-title">狀態</p>
+								<p>合格</p>
+							</td>
 						</tr>
 					</table>
 				</div>
