--- a/teacher-info.html
+++ b/teacher-info.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>教務資訊服務網</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/basic-info.css" />
 </head>
 
 <body>
@@ -20,7 +20,7 @@
 				<label>學習歷程</label>
 				<a href="course-map.html"><img src="images/ic-coursemap.svg"> 課程地圖</a>
 				<a href="learning-footprint.html"><img src="images/ic-footprints.svg"> 學習足跡</a>
-				<a href="#"><img src="images/ic-classgrid.svg"> 修課總覽</a>
+				<a href="course-overview.html"><img src="images/ic-classgrid.svg"> 修課總覽</a>
 				<label>活動經歷</label>
 				<a href="#"><img src="images/ic-societies.svg">社團經歷</a>
 				<a href="#"><img src="images/ic-cup.svg"> 競賽成果</a>
