--- a/learning-footprint.html
+++ b/learning-footprint.html
@@ -8,6 +8,7 @@
 	<title>教務資訊服務網</title>
 	<link rel="stylesheet" type="text/css" href="css/learning-footprint.css" />
 	<script src="js/learning-footprint.js"></script>
+	<script src="js/basic-info.js"></script>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
 				<a href="teacher-info.html"><img src="images/ic-teacher.svg">導師資訊</a>
 				<label>學習歷程</label>
 				<a href="course-map.html"><img src="images/ic-coursemap.svg">課程地圖</a>
-				<a href="learning-footprint.html"><img src="images/ic-footprints.svg">學習足跡</a>
+				<a href="learning-footprint.html"><img src="images/blue-ic-footprints.svg">學習足跡</a>
 				<a href="course-overview.html"><img src="images/ic-classgrid.svg">修課總覽</a>
 				<label>活動經歷</label>
 				<a href="#"><img src="images/ic-societies.svg">社團經歷</a>
