feat : finish club/competition/service & init graduate

--- a/club.html
+++ b/club.html
@@ -6,7 +6,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>教務資訊服務網</title>
-	<link rel="stylesheet" type="text/css" href="css/basic-info.css" />
+	<link rel="stylesheet" type="text/css" href="css/learning-footprint.css" />
+	<script src="js/learning-footprint.js"></script>
 	<script src="js/basic-info.js"></script>
 </head>
 
@@ -35,25 +36,43 @@
 				<div class="ic-news-board"><img src="images/ic-news-board.svg"></div>
 				<div class="ic-login"><img src="images/ic-personal.svg"></div>
 			</div>
+			
 			<div class="main-container">
-				<h1>導師資訊
-					<div class="btn-semester">
-						<a href="#" class="btn-edit">109</a>
-						<a href="#" class="btn-edit">110</a>
-						<a href="#" class="btn-edit">111</a>
-						<a href="#" class="btn-edit">112</a>
-					</div>
-				</h1>
+				<h1>社團經歷</h1>
 				<div class="sub-container">
-					<article>
-						<p><label>學生系級</label>資工系 一年級</p>
-						<p><label>所屬系所</label>資訊工程學系</p>
-						<p><label>導師姓名</label>陳信希</p>
-						<p><label>導師信箱</label>chuangyy@ntu.edu.tw</p>
-						<p><label>導師信箱</label>33664888-527</p>
-					</article>
+					<table>
+						<tr>
+							<th>學年期</th>
+							<th>活動名稱</th>
+							<th>職別</th>
+							<th>職稱</th>
+						</tr>
+						<tr>
+							<td>100-1</td>
+							<td>藍聲口琴社</td>
+							<td>社員</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>100-1</td>
+							<td>藍聲口琴社</td>
+							<td>社員</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>100-1</td>
+							<td>藍聲口琴社</td>
+							<td>社員</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>100-1</td>
+							<td>藍聲口琴社</td>
+							<td>社員</td>
+							<td></td>
+						</tr>
+					</table>
 				</div>
-
 			</div>
 		</section>
 
