--- a/service.html
+++ b/service.html
@@ -6,7 +6,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>教務資訊服務網</title>
-	<link rel="stylesheet" type="text/css" href="css/basic-info.css" />
+	<link rel="stylesheet" type="text/css" href="css/learning-footprint.css" />
+	<script src="js/learning-footprint.js"></script>
 	<script src="js/basic-info.js"></script>
 </head>
 
@@ -30,32 +31,33 @@
 			</div>
 		</nav>
 
-		<section class="main-section">
-			<div class="header-menu">
-				<div class="ic-news-board"><img src="images/ic-news-board.svg"></div>
-				<div class="ic-login"><img src="images/ic-personal.svg"></div>
+		<div class="main-container">
+			<h1>服務學習</h1>
+			<div class="sub-container">
+				<table>
+					<tr>
+						<th class="table-column1">學年期</th>
+						<th class="table-column3">服務學習名稱</th>
+						<th class="table-column4">狀態</th>
+					</tr>
+					<tr>
+						<td class="table-column1">97-1 </td>
+						<td class="table-column3">修習服務學習一</td>
+						<td class="table-column4">通過</td>
+					</tr>
+					<tr>
+						<td class="table-column1">98-1 </td>
+						<td class="table-column3">服務學習二愛校服務</td>
+						<td class="table-column4">通過</td>
+					</tr>
+					<tr>
+						<td class="table-column1">97-1 </td>
+						<td class="table-column3">服務學習（三）校内服務</td>
+						<td class="table-column4">通過</td>
+					</tr>
+				</table>
 			</div>
-			<div class="main-container">
-				<h1>導師資訊
-					<div class="btn-semester">
-						<a href="#" class="btn-edit">109</a>
-						<a href="#" class="btn-edit">110</a>
-						<a href="#" class="btn-edit">111</a>
-						<a href="#" class="btn-edit">112</a>
-					</div>
-				</h1>
-				<div class="sub-container">
-					<article>
-						<p><label>學生系級</label>資工系 一年級</p>
-						<p><label>所屬系所</label>資訊工程學系</p>
-						<p><label>導師姓名</label>陳信希</p>
-						<p><label>導師信箱</label>chuangyy@ntu.edu.tw</p>
-						<p><label>導師信箱</label>33664888-527</p>
-					</article>
-				</div>
-
-			</div>
-		</section>
+		</div>
 
 	</main>
 	<footer>
