--- a/competition.html
+++ b/competition.html
@@ -6,7 +6,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>教務資訊服務網</title>
-	<link rel="stylesheet" type="text/css" href="css/basic-info.css" />
+	<link rel="stylesheet" type="text/css" href="css/learning-footprint.css" />
+	<script src="js/learning-footprint.js"></script>
 	<script src="js/basic-info.js"></script>
 </head>
 
@@ -36,24 +37,57 @@
 				<div class="ic-login"><img src="images/ic-personal.svg"></div>
 			</div>
 			<div class="main-container">
-				<h1>導師資訊
-					<div class="btn-semester">
-						<a href="#" class="btn-edit">109</a>
-						<a href="#" class="btn-edit">110</a>
-						<a href="#" class="btn-edit">111</a>
-						<a href="#" class="btn-edit">112</a>
-					</div>
-				</h1>
+				<h1>競賽成果</h1>
 				<div class="sub-container">
-					<article>
-						<p><label>學生系級</label>資工系 一年級</p>
-						<p><label>所屬系所</label>資訊工程學系</p>
-						<p><label>導師姓名</label>陳信希</p>
-						<p><label>導師信箱</label>chuangyy@ntu.edu.tw</p>
-						<p><label>導師信箱</label>33664888-527</p>
-					</article>
+					<table>
+						<tr>
+							<th class="table-column5">學年期</th>
+							<th class="table-column6">活動名稱</th>
+							<th class="table-column6">登記單位</th>
+							<th class="expand-btn"></th>
+						</tr>
+						<tr>
+							<td class="table-column5">112-2</td>
+							<td class="table-column6">外交部2007年大專校院學生國際問替討論文</td>
+							<td class="table-column6">教學發展中心教師發展組</td>
+							<td class="expand-btn"><img src="images/arrow.svg"></td>
+						</tr>
+						<tr class="table-expand-row">
+							<td class="table-expand-td">
+								<p class="table-detail-title">組別</p>
+								<p>挑戰組</p>
+							</td>
+							<td class="table-expand-td">
+								<p class="table-detail-title">項目</p>
+								<p>男學生</p>
+							</td>
+							<td class="table-expand-td">
+								<p class="table-detail-title">成績</p>
+								<p>第二名</p>
+							</td>
+						</tr>
+						<tr>
+							<td class="table-column5">112-2</td>
+							<td class="table-column6">外交部2007年大專校院學生國際問替討論文</td>
+							<td class="table-column6">教學發展中心教師發展組</td>
+							<td class="expand-btn"><img src="images/arrow.svg"></td>
+						</tr>
+						<tr class="table-expand-row">
+							<td class="table-expand-td">
+								<p class="table-detail-title">組別</p>
+								<p>挑戰組</p>
+							</td>
+							<td class="table-expand-td">
+								<p class="table-detail-title">項目</p>
+								<p>男學生</p>
+							</td>
+							<td class="table-expand-td">
+								<p class="table-detail-title">成績</p>
+								<p>第二名</p>
+							</td>
+						</tr>
+					</table>
 				</div>
-
 			</div>
 		</section>
 
