--- a/course-overview.html
+++ b/course-overview.html
@@ -18,15 +18,16 @@
 			<div class="left-menu">
 				<label>個人資訊</label>
 				<a href="basic-info.html"><img src="images/ic-personal.svg">基本資料</a>
-				<a href="teacher-info.html"><img src="images/ic-teacher.svg"> 導師資訊</a>
+				<a href="teacher-info.html"><img src="images/ic-teacher.svg">導師資訊</a>
 				<label>學習歷程</label>
-				<a href="course-map.html"><img src="images/ic-coursemap.svg"> 課程地圖</a>
-				<a href="learning-footprint.html"><img src="images/ic-footprints.svg"> 學習足跡</a>
-				<a href="course-overview.html"><img src="images/blue-ic-classgrid.svg"> 修課總覽</a>
+				<a href="course-map.html"><img src="images/ic-coursemap.svg">課程地圖</a>
+				<a href="learning-footprint.html"><img src="images/blue-ic-footprints.svg">學習足跡</a>
+				<a href="course-overview.html"><img src="images/ic-classgrid.svg">修課總覽</a>
+				<a href="graduate.html"><img src="images/ic-classgrid.svg">畢業審查</a>
 				<label>活動經歷</label>
-				<a href="#"><img src="images/ic-societies.svg">社團經歷</a>
-				<a href="#"><img src="images/ic-cup.svg"> 競賽成果</a>
-				<a href="#"><img src="images/ic-services.svg"> 服務學習</a>
+				<a href="club.html"><img src="images/ic-societies.svg">社團經歷</a>
+				<a href="competition.html"><img src="images/ic-cup.svg">競賽成果</a>
+				<a href="service.html"><img src="images/ic-services.svg">服務學習</a>
 			</div>
 		</nav>
 
